--- a/web/css/administrator.css
+++ b/web/css/administrator.css
@@ -17,7 +17,8 @@ body {
 }
 
 .gridButton {
-    margin: auto;
+    margin: 15px auto auto auto;
+    height: 80px;
     text-align: center;
     font-size: 24px;
     width: 220px;
@@ -80,43 +81,46 @@ body {
 
 .administratorsGrid {
     display: grid;
-    grid: "empInfoNotifications empInfoNotifications" 60px "districtButton expArtButton" "clientManufacturersButton empButton" "prawnVacButton synthConfWeaponsButton" "prawnRegisterButton prawnJobApplicationsButton"
-}
-
-.administratorsMenuButton {
-    height: 90px;
-    margin-bottom: 30px;
+    grid: "empInfoNotifications empInfoNotifications" 60px "districtButton empButton" "clientManufacturersButton expArtButton" "prawnVacButton prawnJobApplicationsButton" "prawnRegisterButton synthConfWeaponsButton"
 }
 
 .grid--districtButton {
+    grid-area: districtButton;
     margin-right: 30px;
 }
 
 .grid--expArtButton {
+    grid-area: expArtButton;
     margin-left: 30px;
 }
 
 .grid--clientManufacturersButton {
+    grid-area: clientManufacturersButton;
     margin-right: 30px;
 }
 
 .grid--empButton {
+    grid-area: empButton;
     margin-left: 30px;
 }
 
 .grid--prawnVacButton {
+    grid-area: prawnVacButton;
     margin-right: 30px;
 }
 
 .grid--synthConfWeaponsButton {
+    grid-area: synthConfWeaponsButton;
     margin-left: 30px;
 }
 
 .grid--prawnRegisterButton {
+    grid-area: prawnRegisterButton;
     margin-right: 30px;
 }
 
 .grid--prawnJobApplicationsButton {
+    grid-area: prawnJobApplicationsButton;
     margin-left: 30px;
 }
 
@@ -128,7 +132,7 @@ body {
 
 @media (max-width: 700px) {
     .administratorsGrid {
-        grid: "empInfoNotifications" 60px "districtButton" "expArtButton" "clientManufacturersButton" "empButton" "prawnVacButton" "synthConfWeaponsButton" "prawnRegisterButton" "prawnJobApplicationsButton"
+        grid: "empInfoNotifications" 60px "districtButton" "empButton" "clientManufacturersButton" "expArtButton" "prawnVacButton" "prawnJobApplicationsButton" "prawnRegisterButton" "synthConfWeaponsButton"
     }
 
     .gridButton {
