--- a/web/css/administrator.css
+++ b/web/css/administrator.css
@@ -3,8 +3,18 @@ body {
     font-size: 17px;
 }
 
-.grid--empInfoNotifications {
-    grid-area: empInfoNotifications;
+.roundButton{
+    padding: 9px;
+    border: 1px solid black;
+    border-radius: 100px;
+    color: black;
+    text-decoration: none;
+    position: relative;
+    cursor: pointer;
+}
+
+.grid--adminHeader {
+    grid-area: adminHeader;
 }
 
 .empInfo {
@@ -29,6 +39,11 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+.backButton {
+    width: 50px;
+    margin-right: 15px;
 }
 
 .bigInput {
@@ -81,7 +96,7 @@ body {
 
 .administratorsGrid {
     display: grid;
-    grid: "empInfoNotifications empInfoNotifications" 60px "districtButton empButton" "clientManufacturersButton expArtButton" "prawnVacButton prawnJobApplicationsButton" "prawnRegisterButton synthConfWeaponsButton"
+    grid: "adminHeader adminHeader" 60px "districtButton empButton" "clientManufacturersButton expArtButton" "prawnVacButton prawnJobApplicationsButton" "prawnRegisterButton synthConfWeaponsButton"
 }
 
 .grid--districtButton {
@@ -132,7 +147,7 @@ body {
 
 @media (max-width: 700px) {
     .administratorsGrid {
-        grid: "empInfoNotifications" 60px "districtButton" "empButton" "clientManufacturersButton" "expArtButton" "prawnVacButton" "prawnJobApplicationsButton" "prawnRegisterButton" "synthConfWeaponsButton"
+        grid: "adminHeader" 60px "districtButton" "empButton" "clientManufacturersButton" "expArtButton" "prawnVacButton" "prawnJobApplicationsButton" "prawnRegisterButton" "synthConfWeaponsButton"
     }
 
     .gridButton {
