scientists new experiment interface + fixes

--- a/web/css/shop.css
+++ b/web/css/shop.css
@@ -266,5 +266,6 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-right: 0;
     }
 }
